samples/_failures_safe/1761727524_d18291_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_348e09da.c: In function ‘main’:
./samples/SAFE/__tmp_348e09da.c:146:9: error: expected expression at end of input
  146 |         destroy_matrix(&
      |         ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_348e09da.c:146:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_348e09da.c:146:9: error: expected declaration or statement at end of input
